Dev-RBI/src/objects/Additional_Charges__c.object
<CustomObject>
    <description>Additional Charges</description>
    <fields>
        <fullName>Charge_Detail__c</fullName>
        <description>Stores the charge details for a charge type</description>
        <label>Charge Detail</label>
        <picklist>
            <controllingField>Charge_Type__c</controllingField>
            <picklistValues>
                <fullName>Garden Facing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Club House Facing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sea / River / Water Body Facing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Swimming Pool Facing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Covered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Basement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Floor Rise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Main Road Facing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Back to back covered</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Charge_Per_Sqft__c</fullName>
        <description>Charge (Per Sqft)</description>
        <label>Charge (Per Sqft)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Charge_Type__c</fullName>
        <description>Stores the types of additional charges for a project</description>
        <label>Charge Type</label>
        <picklist>
            <picklistValues>
                <fullName>PLC</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Power Backup</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Club Membership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Car Parking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EDC / IDC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lease Rent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IFMS (Interest Free Maintenance Security)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Stores Description</description>
        <label>Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>From_Floor__c</fullName>
        <description>Stores the floor range</description>
        <label>From Floor</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>26</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>27</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>28</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>29</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Input_Guidance__c</fullName>
        <description>Input Guidance</description>
        <label>Input Guidance</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mandatory__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mandatory?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ProjAddnChgUniqueKey__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>ProjAddnChgUniqueKey</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Project_Id__c</fullName>
        <formula>Project__c</formula>
        <label>Project Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Stores relationship with project</description>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Additional Charges</relationshipLabel>
        <relationshipName>Additional_Charges</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Remarks__c</fullName>
        <description>Remarks</description>
        <label>Remarks</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Resale_Value__c</fullName>
        <label>Resale Value</label>
        <picklist>
            <picklistValues>
                <fullName>Transferable</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Non-transferable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>To_Floor__c</fullName>
        <description>Stores the range for the floors</description>
        <label>To Floor</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>26</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>27</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>28</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>29</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Visit_Id__c</fullName>
        <formula>Visit__c</formula>
        <label>Visit Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Visit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Stores relationship with Visit</description>
        <label>Visit</label>
        <referenceTo>Visit__c</referenceTo>
        <relationshipLabel>Additional Charges</relationshipLabel>
        <relationshipName>Additional_Charges</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Additional Charges</label>
    <nameField>
        <displayFormat>ADC-{0000}</displayFormat>
        <label>Charge Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Additional Charges</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Charge_Detail_equals_Floor_rise</fullName>
        <active>true</active>
        <errorConditionFormula>And( 
ISPICKVAL( Charge_Detail__c  , &quot;Floor Rise&quot;), 
OR( 
ISPICKVAL(From_Floor__c  , &quot;&quot;),
ISPICKVAL(To_Floor__c   , &quot;&quot;)  
))</errorConditionFormula>
        <errorDisplayField>From_Floor__c</errorDisplayField>
        <errorMessage>Please select From-Floor and To-Floor when charge detail is selected as Floor Rise</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Charge_Type_Other_Than_PLC</fullName>
        <active>true</active>
        <errorConditionFormula>OR 
( 
AND 
( 
OR 
( 
ISPICKVAL(Charge_Type__c, &quot;Power Backup&quot;), 
ISPICKVAL(Charge_Type__c, &quot;Club Membership&quot;), 
ISPICKVAL(Charge_Type__c, &quot;Car Parking&quot;), 
ISPICKVAL(Charge_Type__c, &quot;EDC / IDC&quot;), 
ISPICKVAL(Charge_Type__c, &quot;Others&quot;) 
), 
OR ( 
NOT(ISPICKVAL(From_Floor__c , &apos;&apos;)), 
NOT(ISPICKVAL(To_Floor__c , &apos;&apos;)) 
) 
), 
AND 
( 
ISPICKVAL(Charge_Type__c, &quot;PLC&quot;), 
NOT(ISPICKVAL(Charge_Detail__c, &quot;Floor Rise&quot;)), 
OR ( 
NOT (ISPICKVAL(From_Floor__c, &apos;&apos;)), 
NOT (ISPICKVAL( To_Floor__c , &apos;&apos;)) 
) 
) 
)</errorConditionFormula>
        <errorMessage>&apos;From Floor&apos; And &apos; To Floor&apos;  is  applicable for  Charge Type as &apos;PLC&apos;  and Charge Detail  as &apos;Floor Rise&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Charge_Type_equal_PLC_rule</fullName>
        <active>true</active>
        <errorConditionFormula>And(

ISPICKVAL( Charge_Type__c , &quot;PLC&quot;),
OR(
ISPICKVAL( Charge_Detail__c , &quot;&quot;)
))</errorConditionFormula>
        <errorDisplayField>Charge_Detail__c</errorDisplayField>
        <errorMessage>Please select charge detail when charge type is selected as PLC</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>From_and_to_Floor_validation_rule</fullName>
        <active>true</active>
        <description>To_Floor should be greater than From_Floor</description>
        <errorConditionFormula>VALUE(TEXT(To_Floor__c))   &lt;  VALUE(TEXT( From_Floor__c))</errorConditionFormula>
        <errorDisplayField>To_Floor__c</errorDisplayField>
        <errorMessage>To Floor should be greater than From Floor</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Project_Id_Should_Not_be_blank_for_PMS_V</fullName>
        <active>true</active>
        <description>Project ID field should be blank for all the entities associated with PMS Visit</description>
        <errorConditionFormula>AND( 
NOT(ISBLANK( Project_Id__c )), 
NOT(ISBLANK( Visit_Id__c )) 

)</errorConditionFormula>
        <errorMessage>Please ensure that either Project Id or Visit Id is blank!</errorMessage>
    </validationRules>
</CustomObject>